--- a/source/templates/cart/cartPage.html.twig
+++ b/source/templates/cart/cartPage.html.twig
@@ -1,4 +1,11 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <strong> it is cart page</strong>
+
+    <div class="row">
+         <div class="col-4">
+             {{ form(postForm) }}
+         </div>
+    </div>
+
 {% endblock %}
