add product page, page about, contact page

--- a/source/templates/about/aboutPage.html.twig
+++ b/source/templates/about/aboutPage.html.twig
@@ -1,21 +1,18 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <strong> it is page of about </strong>
     <main class="container px-3">
-        <?php foreach ($aboutList as $value) :?>
-        <h1><?php echo $value[ 'title' ];?></h1>
+        <h1>{{ aboutPage.getTitle }}</h1>
         <div class="d-flex flex-wrap">
-            <?php for ($i = 0; $i < 3; $i++) :?>
-            <div class="card mb-4 rounded-3 shadow-sm">
-                <div class="card-body">
-                    <img src="/images/<?php echo ($i + 1) ?>_Milan_650x404.jpg" class="img-thumbnail">
+            {% for item in aboutPageArray %}
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-body">
+                        <img src="/images/{{ item.id }}_Milan_650x404.jpg" class="img-thumbnail">
+                    </div>
                 </div>
-            </div>
-            <?php endfor; ?>
-            <p class="stb"><?php echo $value[ 'description' ];?> </p>
-            <p class="stb"> <?php echo $value[ 'footer' ];?> </p>
+            {% endfor %}
+            <p class="stb">{{ aboutPage.getDescription }} </p>
+            <p class="stb">{{ aboutPage.getFooter }} </p>
         </div>
-        <?php endforeach;?>
     </main>
 {% endblock %}
 
