--- a/source/templates/base.html.twig
+++ b/source/templates/base.html.twig
@@ -24,7 +24,7 @@
                 </a>
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
                     <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('mainPage') }}>Main</a>
-                    <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('goodsPage') }}>Goods</a>
+                    <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('productPage') }}>Product</a>
                     <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('accountPage') }}>Account</a>
                     <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('cartPage') }}>Cart</a>
                 </nav>
