--- a/source/templates/contact/contactPage.html.twig
+++ b/source/templates/contact/contactPage.html.twig
@@ -1,4 +1,18 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <strong> it is contact page</strong>
+    <main class="container px-3">
+        <h1 class="mb-5">Contacts</h1>
+        <div class="d-flex flex-wrap">
+            {% for item in contactPageArray %}
+            <div class="card1 mb-3 rounded-3 ">
+                <div class="card-body-contact">
+                    <img src="images/{{ item.Id }}_contact.jpg" class="img-thumbnail">
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li>{{ item.email }} </li>
+                    </ul>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </main>
 {% endblock %}
