--- a/source/templates/base.html.twig
+++ b/source/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="shortcut icon" href="/images/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon"  href="/images/favicon.ico">
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
         <meta charset="UTF-8">
