add productId page

--- a/source/templates/base.html.twig
+++ b/source/templates/base.html.twig
@@ -20,7 +20,6 @@
         <div class="container">
             <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
                 <a href="/main" class="d-flex align-items-center text-dark text-decoration-none">
-{#                    <span class="header-kot">gattino.Store</span>#}
                     <a class="header-kot text-decoration-none" href={{ path('mainPage') }}>gattino.Store</a>
                 </a>
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
@@ -29,7 +28,8 @@
                     <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('accountPage') }}>Account</a>
                     <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('cartPage') }}>Cart</a>
                 </nav>
-                <a class="btn btn-outline-primary" href="/user/login">Sign in</a>
+{#                <a class="btn btn-outline-primary" href="/user/login">Sign in</a>#}
+                <a class="btn btn-outline-primary" href={{ path('registrationPage') }}>Sign in</a>
                 <a class="btn btn-outline-primary" href="/user/logout">Logout</a>
             </div>
         </div>
