--- a/source/templates/registration/registrationEdit.html.twig
+++ b/source/templates/registration/registrationEdit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h3> User ID={{ user.id }}</h3>
+    <h3> User {{ user.name }}</h3>
     <div class="row">
          <div class="col-4">
              {{ form(registrationPage) }}
