add href to cart page

--- a/source/templates/base.html.twig
+++ b/source/templates/base.html.twig
@@ -29,7 +29,7 @@
                     <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('cartPage') }}>Cart</a>
                 </nav>
 {#                <a class="btn btn-outline-primary" href="/user/login">Sign in</a>#}
-                <a class="btn btn-outline-primary" href={{ path('registrationPage') }}>Sign in</a>
+                <a class="btn btn-outline-primary" href={{ path('registrationPage') }}>Registration</a>
                 <a class="btn btn-outline-primary" href="/user/logout">Logout</a>
             </div>
         </div>
