--- a/source/templates/product/productId.html.twig
+++ b/source/templates/product/productId.html.twig
@@ -9,7 +9,7 @@
                     <div class="marginb-1">Age - {{ productId.age }} month</div>
                     <p class="card-text marginb-1"> Character - {{ productId.character_cat }}  </p>
                     <p class="card-text marginb-1"> Soldi - {{ productId.soldi }} </p>
-                    <a class="btn2 btn2-outline-primary" :href={{ path('cartPage') }}>Take me</a>
+                    <a class="btn2 btn2-outline-primary" href={{ path('cartPage') }}>Take me</a>
                     <div class="col-auto d-none d-lg-block">
                         <img id="object-position-1" src="/images/{{ productId.name }}.jpg" class="img-product" width="300" height="214">
                     </div>
