--- a/source/templates/base.html.twig
+++ b/source/templates/base.html.twig
@@ -28,9 +28,12 @@
                     <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('accountPage') }}>Account</a>
                     <a class="me-3 py-2 text-dark text-decoration-none" href={{ path('cartPage') }}>Cart</a>
                 </nav>
-{#                <a class="btn btn-outline-primary" href="/user/login">Sign in</a>#}
-                <a class="btn btn-outline-primary" href={{ path('registrationPage') }}>Registration</a>
-                <a class="btn btn-outline-primary" href="/user/logout">Logout</a>
+                    {% if app.user %}
+                        <strong> Hello, {{ app.user   }} </strong>
+                        <a class="btn btn-outline-primary" href=/logout >Logout</a>
+                    {% else %}
+                        <a class="btn btn-outline-primary" href={{ path('login') }}>Sign in</a>
+                    {% endif %}
             </div>
         </div>
     </header>
